- Support MacOS compilation, also checked FreeBSD compilation still works.
- Correct calculation of spendable vs receivable in `NodeBalanceSwapper`.

0.7A
- Properly consider direction of flow when estimating capacities of nodes.
- Properly rebalance channels greater than 42.94mBTC payment limit.
- Use `payment_secret` in rebalances.
- Work around a timing bug in Tor SOCKS5 implementation.
- CLBOSS can now be started and stopped with the `lightningd` `plugin` command.
- Do not use `proxy` if `always-use-proxy` is not `true`.
- New `ChannelFinderByEarnedFee` module proposes peers of our most lucrative peers, to improve alternate routes to popular destinations.

0.6 Nice Job Breaking It, Hero!
0.5E
- Remove busy-wait loop in `FeeModderBySize`.

0.5D
- Tone down `FundsMover` payment cleanup.
- Batch up RPC socket response parsing.

0.5C
- `FundsMover` now has a backup process to clean up its payments.
- `ChannelFinderByListpays` now ignores self-payments instead of possibly proposing self.
- Optimize traversing JSON results for channel finders.
- Reduce processing load when printing really long RPC logs.
- Correctly handle sudden death of `lightningd` process.
- Really, do not delay response to `init`, for reals.

0.5B
- Do not delay response to `init`.

0.5A
- Handle `rpc_command` specially for better RPC response times even when CLBOSS is busy.
- Make compilable on FreeBSD.
- Print more debug logs for internet connection monitoring.
- Limit resources used by rebalancing attempts.
- Long-running processes (channel finders, peer fee competitor measuring) now print progress reports.
- Lowered execution priority of RPC socket reading and parsing, hopefully this will make us more responsive to our hooks.

0.4 Failed a Spot Check
0.3B
- `ChannelFinderByPopularity` now reduces its participation instead of not participating if we have many channels already.
- Channel finders now ensure they only run once even if multiple triggers occur while they are running.

0.3A